# libazalea

./: Cargo.toml  README.md
src/: application.rs  lib.rs  utils.rs
src/applet/: connection.rs  interface.rs  mod.rs  runtime.rs  serde_types.rs
src/theme/: button.rs  catalogs.rs  container.rs  menu.rs  mod.rs  pallete.rs  scrollable.rs  svg.rs  text.rs  text_input.rs  toggler.rs  typography.rs
src/widget/: autosize.rs  boxed_list.rs  clamp.rs  list_item.rs  menu.rs  mod.rs  splitview.rs
