[package]
name = "libazalea"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
bytes = "1.10.1"
dirs = "6.0.0"
iced = { version = "0.13.*", features = ["advanced", "image", "svg", "lazy"] }
iced_core = "0.13.*"
iced_layershell = "0.13.*"
iced_runtime = "0.13.*"
iced_aw = { version = "0.12.2", features = ["card", "grid", "menu"]}
notify = "8.1.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.9.2"
xdg = "3.0.0"
color = "0.3.1"
